k8s-security-lab/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: security-api-service

spec:
  selector:
    app: security-api

  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000

  type: NodePort
